# verifiable-swift

./: .gitignore  BandersnatchApi.podspec  Package.swift  README.md
BandersnatchApi.xcodeproj/: project.pbxproj
Sources/: BandersnatchApi.swift  SwiftBridgeCore.swift  verifiable-crypto.swift
Tests/: BandersnatchApiTests.swift
bindings/: Cargo.toml  build.rs  build.sh
bindings/src/: lib.rs
bindings/xcframework/verifiable_crypto.xcframework/: Info.plist
bindings/xcframework/verifiable_crypto.xcframework/ios-arm64/Headers/: verifiable-crypto.h
bindings/xcframework/verifiable_crypto.xcframework/ios-arm64_x86_64-simulator/Headers/: module.modulemap  verifiable-crypto.h
examples/bandersnatch-example/bandersnatch-example/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
examples/bandersnatch-example/bandersnatch-example.xcodeproj/: project.pbxproj
verifiable-example/verifiable-example/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
verifiable-example/verifiable-example.xcodeproj/: project.pbxproj
verifiable.xcworkspace/: contents.xcworkspacedata
verifiable/verifiable/: SwiftBridgeCore.swift  VerifiableApi.swift  verifiable-crypto.swift
verifiable/verifiable.xcodeproj/: project.pbxproj
verifiable/verifiableTests/: verifiableTests.swift
